# sematic_search

./: .env  .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
client/: Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.js
client/src/: App.jsx
client/src/pages/: ChatbotManagement.jsx
client/src/routes/: routes.jsx
client/src/utils/: axios.js
client/src/utils/api/: chatbot.js
data/Cranfield/: visualize.ipynb
src/: api.py  app.py  model.py
src/chat/: base_chain.py  chatbot.py  chatbot_abstract.py  chatbot_chain.py  prompts.py  strategies.py
src/chat/query_router/: complexity.py  route_engine.py  rule_based.py  sentiment.py  translate.py  valid_query.py
src/evaluation/: metrics.py
src/ingest/: ingest.py
src/ingest/connector/: abstract_connector.py  connector_main.py  file_connector.py  huggingface_dataset_connector.py  sql_connector.py  url_connector.py
src/ingestion/: chunking.py  embedding.py  ingest.py
src/ingestion/connector/: Cranfield_dataset_connector.py  connector_main.py  huggingface_dataset_connector.py
src/search/: search.py
src/search/query_classification/complex_classification/: query_classification.py  train.ipynb  train.py
src/search/search_strategy/: abstract_search_strategy.py  evaluate_search_strategy.py  hybrid_search.py  search_strategy_factory.py
src/utils/: hash.py  query_expansion.py  serializer.py
src/utils/db_connection/: mongodb_connector.py
